fix layout; remove padding from body for improved spacing

--- a/style.css
+++ b/style.css
@@ -142,7 +142,6 @@ body
 {
     width:100%;
     margin:auto;
-    padding:80px 0;
 }
 .my-image
 {
